--- a/index.html
+++ b/index.html
@@ -645,18 +645,18 @@
 
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="assets/images/portfolio/p1.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/NLP.jpeg" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="#">
-												ui/ux design
+											<a href="https://github.com/Emmacho/natural-language-processing-using-fuzzy-search">
+												NLP
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="assets/images/portfolio/p2.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/comvision.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="#">
-												ui/ux design
+											<a href="https://github.com/Emmacho/computer-vision-face-detaction/tree/main">
+												Computer Vision
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
