update project profile

--- a/index.html
+++ b/index.html
@@ -666,8 +666,8 @@
 									<div class="item">
 										<img src="assets/images/portfolio/p3.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="#">
-												web design
+											<a href="https://github.com/Emmacho/complete-guide-to-data-lakes-and-lakehouses-3865060">
+												Data Wearhouse & Lakehouse
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
@@ -675,18 +675,18 @@
 
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="assets/images/portfolio/p4.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/dataAnalytics.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
-												web development
+												Advance Analytics
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="assets/images/portfolio/p5.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/dashBoard.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
-												web development
+												BI Dashboard
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
